FIPS-7042/FIPS-7405 :: Class#newInstance() -> Class#getConstructor()#newInstance()
Change-Id: I73430967bb62ea941df91fa7312f501b982d3a6a